# llama.cpp

./: CMakeLists.txt  ggml-cuda.cu  ggml.c  ggml.h  llama.cpp  run-only-cpu.sh  run-server.sh
examples/main/: CMakeLists.txt
ggml-cuda/: fattn.cu
tests/: test-backend-ops.cpp  test-flash-attention.cpp
